# Adiak

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  adiak.c  adiak.cpp  adiak.h  adiak.hpp  adiak_internal.h  adiak_internal.hpp  adiak_tool.h  sys_linux.c  sys_posix.c  sys_posix_common.c  testapp.c  testapp.cpp  testlib.c
.github/workflows/: cmake.yml  ghpages.yml
cmake/: config.cmake.in
docs/: Adiak API.docx  CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in  adiak.dox
docs/sphinx/: ApplicationAPI.rst  BasicUsage.rst  BestPractices.rst  CMakeLists.txt  GettingAdiak.rst  PythonSupport.rst  ToolAPI.rst  ToolsUsingAdiak.rst  conf.py.in  index.rst
include/: adiak.h  adiak.hpp  adiak_internal.hpp  adiak_tool.h
scripts/: make_release_tarball.sh
src/: CMakeLists.txt  adiak.c  adiak_kokkos.cpp  adksys.h  adksys_glibc.c  adksys_mpi.c  adksys_osx.c  adksys_posix.c  adksys_procfs.c  adksys_unix.c  adksys_windows.c
src/interface/python/: CMakeLists.txt  common.hpp  mod.cpp  pyadiak.cpp  pyadiak.hpp  pyadiak_tool.cpp  pyadiak_tool.hpp  types.cpp  types.hpp
src/interface/python/pyadiak/: annotations.py  tools.py  types.py
tests/: CMakeLists.txt  adiak_gtest.cpp  test_application-api.cpp  test_zerocopy.c  testapp.c  testapp.cpp  testapp.py  testlib.c
